# ZJUCSSU-Updatebot

./: .env.example  .gitignore  README.md  config.yaml  pyproject.toml
scripts/: install.sh  run.sh
updatebot/: __init__.py  config.py  gitops.py  llm.py  main.py  writer.py
